exports[`key-name-casing > invalid(1): snake_case: 1 1`] = `

  1 | snake_case: 1

`;

exports[`key-name-casing > invalid(1): snake_case: 1 2`] = `

Message:
> 1 | snake_case: 1
    | ^^^^^^^^^^ Key \`snake_case\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(1): {\"user-name\": \"user_name\", \"nested\": {\"OtherKey\": 1}} 1`] = `

  1 | {"user-name": "user_name", "nested": {"OtherKey": 1}}

`;

exports[`key-name-casing > invalid(1): {\"user-name\": \"user_name\", \"nested\": {\"OtherKey\": 1}} 2`] = `

Message:
> 1 | {"user-name": "user_name", "nested": {"OtherKey": 1}}
    |  ^^^^^^^^^^^ Key \`user-name\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(1): {\"user-name\": \"user_name\", \"nested\": {\"OtherKey\": 1}} 3`] = `

Message:
> 1 | {"user-name": "user_name", "nested": {"OtherKey": 1}}
    |                                       ^^^^^^^^^^ Key \`OtherKey\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(1): {\"user_name\":1} 1`] = `

Options:
- camelCase: true

Code:
  1 | {"user_name":1}

`;

exports[`key-name-casing > invalid(1): {\"user_name\":1} 2`] = `

Message:
> 1 | {"user_name":1}
    |  ^^^^^^^^^^^ Key \`user_name\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(1): {user_name: 1} 1`] = `

  1 | {user_name: 1}

`;

exports[`key-name-casing > invalid(1): {user_name: 1} 2`] = `

Message:
> 1 | {user_name: 1}
    |  ^^^^^^^^^ Key \`user_name\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(10): {\"user_name\": 1, \"\": 2, \"two words\": 3} 1`] = `

  1 | {"user_name": 1, "": 2, "two words": 3}

`;

exports[`key-name-casing > invalid(10): {\"user_name\": 1, \"\": 2, \"two words\": 3} 2`] = `

Message:
> 1 | {"user_name": 1, "": 2, "two words": 3}
    |  ^^^^^^^^^^^ Key \`user_name\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(10): {\"user_name\": 1, \"\": 2, \"two words\": 3} 3`] = `

Message:
> 1 | {"user_name": 1, "": 2, "two words": 3}
    |                  ^^ Key \`\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(10): {\"user_name\": 1, \"\": 2, \"two words\": 3} 4`] = `

Message:
> 1 | {"user_name": 1, "": 2, "two words": 3}
    |                         ^^^^^^^^^^^ Key \`two words\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(11): {\"userID\": 1} 1`] = `

  1 | {"userID": 1}

`;

exports[`key-name-casing > invalid(11): {\"userID\": 1} 2`] = `

Message:
> 1 | {"userID": 1}
    |  ^^^^^^^^ Key \`userID\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(12): {\"user\\u002Dname\": 1} 1`] = `

  1 | {"user\\u002Dname": 1}

`;

exports[`key-name-casing > invalid(12): {\"user\\u002Dname\": 1} 2`] = `

Message:
> 1 | {"user\\u002Dname": 1}
    |  ^^^^^^^^^^^^^^^^ Key \`user-name\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(2): parent: {bad_key: 1} 1`] = `

  1 | parent: {bad_key: 1}

`;

exports[`key-name-casing > invalid(2): parent: {bad_key: 1} 2`] = `

Message:
> 1 | parent: {bad_key: 1}
    |          ^^^^^^^ Key \`bad_key\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(2): {\"userName\":1} 1`] = `

Options:
- camelCase: false
  PascalCase: true

Code:
  1 | {"userName":1}

`;

exports[`key-name-casing > invalid(2): {\"userName\":1} 2`] = `

Message:
> 1 | {"userName":1}
    |  ^^^^^^^^^^ Key \`userName\` must be in \`PascalCase\`.

`;

exports[`key-name-casing > invalid(2): {\"user_name\": 1, \"\": 2, \"two words\": 3} 1`] = `

  1 | {"user_name": 1, "": 2, "two words": 3}

`;

exports[`key-name-casing > invalid(2): {\"user_name\": 1, \"\": 2, \"two words\": 3} 2`] = `

Message:
> 1 | {"user_name": 1, "": 2, "two words": 3}
    |  ^^^^^^^^^^^ Key \`user_name\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(2): {\"user_name\": 1, \"\": 2, \"two words\": 3} 3`] = `

Message:
> 1 | {"user_name": 1, "": 2, "two words": 3}
    |                  ^^ Key \`\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(2): {\"user_name\": 1, \"\": 2, \"two words\": 3} 4`] = `

Message:
> 1 | {"user_name": 1, "": 2, "two words": 3}
    |                         ^^^^^^^^^^^ Key \`two words\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(2): {user\\u005fname: 1} 1`] = `

  1 | {user\\u005fname: 1}

`;

exports[`key-name-casing > invalid(2): {user\\u005fname: 1} 2`] = `

Message:
> 1 | {user\\u005fname: 1}
    |  ^^^^^^^^^^^^^^ Key \`user_name\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(3): 'bad-key': {other_key: 2} 1`] = `

  1 | 'bad-key': {other_key: 2}

`;

exports[`key-name-casing > invalid(3): 'bad-key': {other_key: 2} 2`] = `

Message:
> 1 | 'bad-key': {other_key: 2}
    | ^^^^^^^^^ Key \`bad-key\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(3): 'bad-key': {other_key: 2} 3`] = `

Message:
> 1 | 'bad-key': {other_key: 2}
    |             ^^^^^^^^^ Key \`other_key\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(3): user-name: 1\nnested: {OtherKey: 2}\n\"user\\u005Fname\": 3 1`] = `

  1 | user-name: 1
  2 | nested: {OtherKey: 2}
  3 | "user\\u005Fname": 3

`;

exports[`key-name-casing > invalid(3): user-name: 1\nnested: {OtherKey: 2}\n\"user\\u005Fname\": 3 2`] = `

Message:
> 1 | user-name: 1
    | ^^^^^^^^^ Key \`user-name\` must be in \`camelCase\`.
  2 | nested: {OtherKey: 2}
  3 | "user\\u005Fname": 3

`;

exports[`key-name-casing > invalid(3): user-name: 1\nnested: {OtherKey: 2}\n\"user\\u005Fname\": 3 3`] = `

Message:
  1 | user-name: 1
> 2 | nested: {OtherKey: 2}
    |          ^^^^^^^^ Key \`OtherKey\` must be in \`camelCase\`.
  3 | "user\\u005Fname": 3

`;

exports[`key-name-casing > invalid(3): user-name: 1\nnested: {OtherKey: 2}\n\"user\\u005Fname\": 3 4`] = `

Message:
  1 | user-name: 1
  2 | nested: {OtherKey: 2}
> 3 | "user\\u005Fname": 3
    | ^^^^^^^^^^^^^^^^ Key \`user_name\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(3): {\"userID\": 1} 1`] = `

  1 | {"userID": 1}

`;

exports[`key-name-casing > invalid(3): {\"userID\": 1} 2`] = `

Message:
> 1 | {"userID": 1}
    |  ^^^^^^^^ Key \`userID\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(3): {\"user_name\":1} 1`] = `

Options:
- camelCase: false
  SCREAMING_SNAKE_CASE: true

Code:
  1 | {"user_name":1}

`;

exports[`key-name-casing > invalid(3): {\"user_name\":1} 2`] = `

Message:
> 1 | {"user_name":1}
    |  ^^^^^^^^^^^ Key \`user_name\` must be in \`SCREAMING_SNAKE_CASE\`.

`;

exports[`key-name-casing > invalid(4): \"<<\": value 1`] = `

  1 | "<<": value

`;

exports[`key-name-casing > invalid(4): \"<<\": value 2`] = `

Message:
> 1 | "<<": value
    | ^^^^ Key \`<<\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(4): \"\\u{62}ad_key\": 1 1`] = `

  1 | "\\u{62}ad_key": 1

`;

exports[`key-name-casing > invalid(4): \"\\u{62}ad_key\": 1 2`] = `

Message:
> 1 | "\\u{62}ad_key": 1
    | ^^^^^^^^^^^^^^ Key \`bad_key\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(4): {\"User-Name\":1} 1`] = `

Options:
- camelCase: false
  kebab-case: true

Code:
  1 | {"User-Name":1}

`;

exports[`key-name-casing > invalid(4): {\"User-Name\":1} 2`] = `

Message:
> 1 | {"User-Name":1}
    |  ^^^^^^^^^^^ Key \`User-Name\` must be in \`kebab-case\`.

`;

exports[`key-name-casing > invalid(4): {\"user\\u002Dname\": 1} 1`] = `

  1 | {"user\\u002Dname": 1}

`;

exports[`key-name-casing > invalid(4): {\"user\\u002Dname\": 1} 2`] = `

Message:
> 1 | {"user\\u002Dname": 1}
    |  ^^^^^^^^^^^^^^^^ Key \`user-name\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(5): user-name = 1\n[nested.OtherKey]\n\"user\\u005Fname\".inner-key = 2 1`] = `

  1 | user-name = 1
  2 | [nested.OtherKey]
  3 | "user\\u005Fname".inner-key = 2

`;

exports[`key-name-casing > invalid(5): user-name = 1\n[nested.OtherKey]\n\"user\\u005Fname\".inner-key = 2 2`] = `

Message:
> 1 | user-name = 1
    | ^^^^^^^^^ Key \`user-name\` must be in \`camelCase\`.
  2 | [nested.OtherKey]
  3 | "user\\u005Fname".inner-key = 2

`;

exports[`key-name-casing > invalid(5): user-name = 1\n[nested.OtherKey]\n\"user\\u005Fname\".inner-key = 2 3`] = `

Message:
  1 | user-name = 1
> 2 | [nested.OtherKey]
    |         ^^^^^^^^ Key \`OtherKey\` must be in \`camelCase\`.
  3 | "user\\u005Fname".inner-key = 2

`;

exports[`key-name-casing > invalid(5): user-name = 1\n[nested.OtherKey]\n\"user\\u005Fname\".inner-key = 2 4`] = `

Message:
  1 | user-name = 1
  2 | [nested.OtherKey]
> 3 | "user\\u005Fname".inner-key = 2
    | ^^^^^^^^^^^^^^^^ Key \`user_name\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(5): user-name = 1\n[nested.OtherKey]\n\"user\\u005Fname\".inner-key = 2 5`] = `

Message:
  1 | user-name = 1
  2 | [nested.OtherKey]
> 3 | "user\\u005Fname".inner-key = 2
    |                  ^^^^^^^^^ Key \`inner-key\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(5): value: [{bad_key: 1}] 1`] = `

  1 | value: [{bad_key: 1}]

`;

exports[`key-name-casing > invalid(5): value: [{bad_key: 1}] 2`] = `

Message:
> 1 | value: [{bad_key: 1}]
    |          ^^^^^^^ Key \`bad_key\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(5): {\"user-name\": \"user_name\", \"nested\": {\"OtherKey\": 1}} 1`] = `

  1 | {"user-name": "user_name", "nested": {"OtherKey": 1}}

`;

exports[`key-name-casing > invalid(5): {\"user-name\": \"user_name\", \"nested\": {\"OtherKey\": 1}} 2`] = `

Message:
> 1 | {"user-name": "user_name", "nested": {"OtherKey": 1}}
    |  ^^^^^^^^^^^ Key \`user-name\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(5): {\"user-name\": \"user_name\", \"nested\": {\"OtherKey\": 1}} 3`] = `

Message:
> 1 | {"user-name": "user_name", "nested": {"OtherKey": 1}}
    |                                       ^^^^^^^^^^ Key \`OtherKey\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(5): {\"user-name\":1} 1`] = `

Options:
- camelCase: false
  snake_case: true

Code:
  1 | {"user-name":1}

`;

exports[`key-name-casing > invalid(5): {\"user-name\":1} 2`] = `

Message:
> 1 | {"user-name":1}
    |  ^^^^^^^^^^^ Key \`user-name\` must be in \`snake_case\`.

`;

exports[`key-name-casing > invalid(6): '': 1 1`] = `

  1 | '': 1

`;

exports[`key-name-casing > invalid(6): '': 1 2`] = `

Message:
> 1 | '': 1
    | ^^ Key \`\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(6): [[other_key]]\nvalue = {inner-key = 1} 1`] = `

  1 | [[other_key]]
  2 | value = {inner-key = 1}

`;

exports[`key-name-casing > invalid(6): [[other_key]]\nvalue = {inner-key = 1} 2`] = `

Message:
> 1 | [[other_key]]
    |   ^^^^^^^^^ Key \`other_key\` must be in \`camelCase\`.
  2 | value = {inner-key = 1}

`;

exports[`key-name-casing > invalid(6): [[other_key]]\nvalue = {inner-key = 1} 3`] = `

Message:
  1 | [[other_key]]
> 2 | value = {inner-key = 1}
    |          ^^^^^^^^^ Key \`inner-key\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(6): {\"user_name\": 1, \"\": 2, \"two words\": 3} 1`] = `

  1 | {"user_name": 1, "": 2, "two words": 3}

`;

exports[`key-name-casing > invalid(6): {\"user_name\": 1, \"\": 2, \"two words\": 3} 2`] = `

Message:
> 1 | {"user_name": 1, "": 2, "two words": 3}
    |  ^^^^^^^^^^^ Key \`user_name\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(6): {\"user_name\": 1, \"\": 2, \"two words\": 3} 3`] = `

Message:
> 1 | {"user_name": 1, "": 2, "two words": 3}
    |                  ^^ Key \`\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(6): {\"user_name\": 1, \"\": 2, \"two words\": 3} 4`] = `

Message:
> 1 | {"user_name": 1, "": 2, "two words": 3}
    |                         ^^^^^^^^^^^ Key \`two words\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(7): [nested.\"other.key\"]\nvalue = 1 1`] = `

  1 | [nested."other.key"]
  2 | value = 1

`;

exports[`key-name-casing > invalid(7): [nested.\"other.key\"]\nvalue = 1 2`] = `

Message:
> 1 | [nested."other.key"]
    |         ^^^^^^^^^^^ Key \`other.key\` must be in \`camelCase\`.
  2 | value = 1

`;

exports[`key-name-casing > invalid(7): {\"userID\": 1} 1`] = `

  1 | {"userID": 1}

`;

exports[`key-name-casing > invalid(7): {\"userID\": 1} 2`] = `

Message:
> 1 | {"userID": 1}
    |  ^^^^^^^^ Key \`userID\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(8): {\"user\\u002Dname\": 1} 1`] = `

  1 | {"user\\u002Dname": 1}

`;

exports[`key-name-casing > invalid(8): {\"user\\u002Dname\": 1} 2`] = `

Message:
> 1 | {"user\\u002Dname": 1}
    |  ^^^^^^^^^^^^^^^^ Key \`user-name\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(9): {\"user-name\": \"user_name\", \"nested\": {\"OtherKey\": 1}} 1`] = `

  1 | {"user-name": "user_name", "nested": {"OtherKey": 1}}

`;

exports[`key-name-casing > invalid(9): {\"user-name\": \"user_name\", \"nested\": {\"OtherKey\": 1}} 2`] = `

Message:
> 1 | {"user-name": "user_name", "nested": {"OtherKey": 1}}
    |  ^^^^^^^^^^^ Key \`user-name\` must be in \`camelCase\`.

`;

exports[`key-name-casing > invalid(9): {\"user-name\": \"user_name\", \"nested\": {\"OtherKey\": 1}} 3`] = `

Message:
> 1 | {"user-name": "user_name", "nested": {"OtherKey": 1}}
    |                                       ^^^^^^^^^^ Key \`OtherKey\` must be in \`camelCase\`.

`;
